Revert "fix: CSS fixes for dark mode."
This reverts commit 661c05483654f1d77d98227c912d0e95bfba65d2.

--- a/app/resources/styles/teamai.css
+++ b/app/resources/styles/teamai.css
@@ -13,6 +13,7 @@
   --link-text-color-visited: var(--color-flamingo);
 }
 
+
 .disclaimer {
   background-color: var(--color-flamingo);
   font-weight: bold;
@@ -81,6 +82,7 @@
 .teamai-settings {
   border: 1px solid var(--color-light-gray);
 }
+
 
 /* Header styling: One row */
 /* .header-title h1 {
@@ -210,11 +212,6 @@
   border: 1px solid var(--color-light-gray) !important;
 }
 
-.copyright_text {
-  text-align: center;
-  background-color: white !important;
-}
-
 @media (prefers-color-scheme: dark) {
   .model-settings {
     background-color: var(--block-background-fill) !important;
@@ -231,34 +228,6 @@
   .primary {
     background-color: var(--color-flamingo) !important;
   }
-
-  .teamai-content {
-    background-color: transparent;
-  }
-
-  .teamai-tabs-container {
-    background-color: rgb(31, 41, 55);
-  }
-
-  .teamai-group {
-    border: 1px solid var(--color-dark-blue) !important;
-  }
-
-  .tabitem {
-    background-color: var(--background-fill-secondary);
-  }
-
-  .knowledge-context-list{
-    border: 1px solid var(--color-dark-blue) !important;
-  }
-
-  .copyright_text{
-    background-color: var(--background-fill-primary) !important;
-  }
-
-  .tabs .selected {
-    background-color: var(--background-fill-secondary) !important;
-  }
 }
 
 .show-api {
@@ -266,10 +235,13 @@
 }
 
 .show-api + div {
-  display: none !important;
+    display: none !important;
 }
 
-
+.copyright_text {
+    text-align: center;
+    background-color: white !important;
+}
 
 /* HEADER */
 .header {
@@ -322,6 +294,7 @@
 .mode-button {
   border: none;
   padding: 5px 10px !important;
+
 }
 
 .mode-selected {
